--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d57b61cd-c88d-431e-a5cf-5e59a7c448ed"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
