--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@skyeer/react-leaflet-custom-control": "^0.0.6",
+    "custom-control": "^1.0.3",
+    "jsfeat": "^0.0.8",
+    "leaflet": "^1.7.1",
+    "leaflet.fullscreen": "^2.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,7 +32,10 @@
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/leaflet": "^1.7.6",
+    "@types/leaflet-groupedlayercontrol": "^0.6.1",
+    "@types/leaflet.fullscreen": "^1.6.1",
+    "@types/node": "^12.20.37",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
